deploy/metrics-demo/metrics-demo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-demo
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - port: 9899
      targetPort: 9899
      protocol: TCP
      name: http
  selector:
    app: metrics-demo
